# galias

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  api.py  cli.py  config.py  galias  galias.bat  improvctl.py  install.bat  install.py  install_galias.bat  pyproject.toml  requirements.txt  setup.py  smart_install.py  ui.py
.github/workflows/: ci.yml
tests/: __init__.py  test_api.py  test_basic_functionality.py  test_config.py  test_integration.py  test_ui.py
